2010-11-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_extjs_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_error_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_db_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_context_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_cache_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_xml
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_userauthgroup
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_userauth
	* Fixed bug #16561: t3lib_userauth: wrong var and wong function call
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tstemplate
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tsparser_tsstyleconfig
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tsparser_tsconfig
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tsparser_ext
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tsparser
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tsfebeuserauth
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_treeview
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_transl8tools
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_transferdata
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_timetracknull
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_timetrack
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tcemain
	* Fixed bug #16558: tcemain: wrong variables used due copy&paste
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms_inline
	* Fixed bug #16557: Wrong variables in tceforms_inline
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms_fe